Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29145

ClangFormat ignores configuration file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • None
    • Qt Creator 10.0.1, Qt Creator 10.0.2, Qt Creator 11.0.0-beta1
    • None
    • Linux/X11
    • 948dc6b37 (10.0)

    Description

      A recent upgrade from QtCreator 10.0.0 to 10.0.1 brought a bug that the configuration file I'm using for a current C++ project is just ignored. As a result – wrong formatting is applied.

      Rolled back to 10.0.0, and the clang format in the same project works.

       

       

      Attachments

        1. QTCREATORBUG29145.zip
          7 kB
          Irfan Omair
        2. global_settings.png
          50 kB
          Artem Sokolovskii
        3. project_settings.png
          146 kB
          Artem Sokolovskii
        4. .clang-format
          6 kB
          j39pa4o4 j39pa4o4
        5. QtC_clang_bug.png
          39 kB
          Nazar Gerasymchuk
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            artem.sokolovskii Artem Sokolovskii
            troyane Nazar Gerasymchuk
            Votes:
            7 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes