ClangFormat: Fix clangformat ignores configuration file

Fixes: QTCREATORBUG-29145
Change-Id: I6950151aaab9df51cfdd0af0ad9cf3c7b35c0636
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>