src/plugins/clangformat/clangformatglobalconfigwidget.h
@@ -43,6 +43,7 @@ private:
     ProjectExplorer::Project *m_project;
     TextEditor::ICodeStylePreferences *m_codeStyle;
     Utils::Guard m_ignoreChanges;
+    bool m_overrideDefaultFile;
 
     QLabel *m_projectHasClangFormat;
     QLabel *m_formattingModeLabel;
